# foundry-updates

./: README.md  SECRETS_SETUP.md  foundry-models.rss  generate_rss_feed.py  requirements.txt  test_generate_rss.py
.github/workflows/: update-rss-feed.yml
scripts/: README.md  generate_rss_feed.py  pyproject.toml  test_generate_rss.py
