[project]
name = "foundry-updates"
version = "0.1.0"
description = "Automated RSS feed generator for Azure AI Foundry model updates"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["generate_rss_feed.py"]
